src/style.scss
@charset "utf8";
html {
  overflow-x: hidden;
}

.links {
  margin-top: -1.7rem;
  margin-left: -1.5rem;
  padding: 1rem;
}

@media screen and (max-width: 320px) {
  html {
    background: url("/assets/img/Rectangle 1 copy.png") no-repeat;
    background-size: cover;
  }

  #logotipo {
    margin-top: -2rem;
    margin-left: -1rem;
    margin-bottom: 1rem;
  }
  #destaques {
    padding-top: -10rem;
  }

  #fundo_full {
    display: none !important;
  }
  .carousel {
    display: none;
  }
  #como_funciona {
    background: url("/assets/img/Como Funciona.png") no-repeat;
    height: 6rem;
    margin-left: 2rem;
    margin-top: 3rem;
  }
  #como_fazer {
    color: #495057;
    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
    font-style: initial;
    font-weight: 500;
    margin-top: 2rem;
    text-align: center;
    padding: 1rem;
    margin-left: -3rem;
  }
  #destaques {
    background: url("/assets/img/destaque.png") no-repeat;
    background-size: cover;
  }
  #vantagens {
    display: none !important;
  }
  #vantagens_full {
    background: url("/assets/img/Vantagens_title.png") no-repeat;
    margin-top: 3rem;
    margin-left: 4rem;
  }
  #vantagens_full {
    padding-top: 3rem;
    color: #495057;
    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
    font-style: initial;
    font-weight: 500;
    text-align: center;
    padding-right: 4rem;
  }
  #person {
    background: url("/assets/img/person_book.png") no-repeat;
    background-size: cover;
    height: 18rem;
  }
  #banner_livros {
    margin-bottom: -8rem;
  }
  #baixe_o_app {
    background: url("/assets/img/Baixe o aplicativo App Store.png") no-repeat;
    background-size: cover;
    height: 4rem;
    margin-left: -1rem;
  }
  #escolha_o_livro {
    background: url("/assets/img/Escolha o livro Mais de 1500 a sua disposicao.png")
      no-repeat;
    background-size: cover;
    height: 4rem;
    margin-left: -1rem;
  }
  #marque_local {
    background: url("/assets/img/Marque a localizacao Dica_ Escolha o mais proximo de você.png")
      no-repeat;
    background-size: cover;
    height: 4rem;
    margin-left: -1rem;
  }
  #pegue_o_livro {
    background: url("/assets/img/Pegue o livro Vá no encontro do doador e boa leitura.png")
      no-repeat;
    background-size: cover;
    height: 4rem;
    margin-left: -1rem;
  }
}

#destaque {
  text-align: center;
  margin-top: 10rem;
  margin-left: 58rem;
}

.card {
  display: inline-block;
  margin: 1rem;
}

/*
PARA COLOCAR EFEITO DE SOMBRA DEBAIXO DOS CARDS ONDE IRAO AS IMAENS DOS LIVROS
REMOVA OS COMENTARIOS ABAIXO PARA ABILITAR O EFEITO
OU CASO PREFIRA DEIXE-O DESABILITADO
*/

// .card:hover {
//   color: rgb(61, 61, 61);
//   cursor: pointer;
//   transform: scale(1.1);
//   box-shadow: 0px 20px 30px 0.1px grey;
//   border: none;
//   font-weight: 600;
// }
.carousel {
  margin-bottom: -4.4rem;
  margin-top: 6rem;
}

#vantagens {
  padding-top: 4rem;
}

#banner_livros {
  padding-top: 4rem;
}

@media screen and (min-width: 320px) {
  #vantagens_full {
    display: none;
  }
  #como_fazer {
    display: none;
  }
}

@media screen and (min-width: 318px) and (max-width: 427px) {
  #logotipo {
    margin-left: -1rem;
  }
}

@media screen and (min-width: 320px) and (max-width: 1194px) {
  #vantagens {
    display: none;
  }
  #vantagens_full {
    background: url("/assets/img/Vantagens_title.png") no-repeat;
    margin-top: 3rem;
    margin-left: 4rem;
  }
  #vantagens_full {
    padding-top: 3rem;
    color: #495057;
    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
    font-style: initial;
    font-weight: 500;
    text-align: center;
    padding-right: 4rem;
  }
  #person {
    background: url("/assets/img/person_book.png") no-repeat;
    height: 20rem;
    max-width: 320px !important;
    width: auto;
    margin-left: 30%;
    margin-top: 4rem;
  }
  #banner_livros {
    margin-bottom: -8rem;
  }
  #baixe_o_app {
    background: url("/assets/img/Baixe o aplicativo App Store.png") no-repeat;
    height: 5rem;
    max-width: 500px !important;
    width: auto;
    margin-left: 30%;
  }
  #escolha_o_livro {
    background: url("/assets/img/Escolha o livro Mais de 1500 a sua disposicao.png")
      no-repeat;
    height: 5rem;
    max-width: 500px !important;
    width: auto;
    margin-left: 30%;
  }
  #marque_local {
    background: url("/assets/img/Marque a localizacao Dica_ Escolha o mais proximo de você.png")
      no-repeat;
    height: 5rem;
    max-width: 500px !important;
    width: auto;
    margin-left: 30%;
  }
  #pegue_o_livro {
    background: url("/assets/img/Pegue o livro Vá no encontro do doador e boa leitura.png")
      no-repeat;
    height: 5rem;
    max-width: 500px !important;
    width: auto;
    margin-left: 30%;
  }
}

/* Overlay do Angular Material deve ficar acima de menus fixos (desktop/mobile). */
.cdk-overlay-container,
.cdk-global-overlay-wrapper {
  z-index: 2000 !important;
}

.cdk-overlay-backdrop {
  z-index: 1999 !important;
}

.cdk-overlay-pane {
  z-index: 2001 !important;
}

/* Metadata Dialog Full-Screen on Mobile */
@media (max-width: 767px) {
  .custom-metadata-dialog {
    max-width: 100vw !important;
    width: 100vw !important;
    height: 100vh !important;
    max-height: 100vh !important;
    margin: 0 !important;

    mat-dialog-container {
      border-radius: 0 !important;
      padding: 0 !important;
    }

    .metadata-dialog {
      height: 100vh;
      display: flex;
      flex-direction: column;
      border-radius: 0;
    }

    .metadata-dialog__header {
      padding: 1rem;
      border-radius: 0;
    }

    .metadata-dialog__content {
      flex: 1;
      padding: 0 !important;
      overflow-y: auto;
    }

    .metadata-inspector {
      border-radius: 0 !important;
      border-left: none !important;
      border-right: none !important;
      border-top: none !important;
      margin: 0 !important;
    }

    /* Ajuste para a tabela de metadados não quebrar layout */
    .metadata-inspector__row {
      grid-template-columns: 100px 1fr !important;
    }

    .metadata-table {
      font-size: 0.85rem;
      
      td {
        padding: 0.5rem;
      }
    }
  }
}

